--- a/src/main/resources/assets/crimsonxp/lang/zh_cn.json
+++ b/src/main/resources/assets/crimsonxp/lang/zh_cn.json
@@ -7,5 +7,5 @@
   "tip2.crimsonxp.xp_charm": "潜行状态下手持护符右键可以向玩家经验槽转入64点经验",
   "shift.crimsonxp.xp_charm": "按下 §bSHIFT§r 查看详情",
 
-  "container.crimsonxp.charm": "深红经验护符"
+  "container.crimsonxp.charm": "绯红经验护符"
 }
